--- a/index.html
+++ b/index.html
@@ -1,12 +1,54 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Test Page</title>
-</head>
-<body>
-    <h1>Hello, GitHub Pages!</h1>
-    <p>This is a test page.</p>
-</body>
+<!doctype html>
+<html lang="fr">
+  <head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>Musée des Télécoms</title>
+    <!-- Copyright © 2014 Monotype Imaging Inc. All rights reserved -->
+    <link href="https://cdn.jsdelivr.net/npm/boosted@5.3.3/dist/css/orange-helvetica.min.css" rel="stylesheet" integrity="sha384-A0Qk1uKfS1i83/YuU13i2nx5pk79PkIfNFOVzTcjCMPGKIDj9Lqx9lJmV7cdBVQZ" crossorigin="anonymous">
+    <link href="https://cdn.jsdelivr.net/npm/boosted@5.3.3/dist/css/boosted.min.css" rel="stylesheet" integrity="sha384-laZ3JUZ5Ln2YqhfBvadDpNyBo7w5qmWaRnnXuRwNhJeTEFuSdGbzl4ZGHAEnTozR" crossorigin="anonymous">
+    <!-- <link href="Style/accueil2.css" rel="stylesheet"> -->
+
+  </head>
+  <body>
+    
+      <br><br><br>
+    <center><h1>Musée des Télécoms</h1><h2>Visite du Parcours Immersif <br>sous le Radôme</h2></center>
+        <br><br><br><br>
+
+
+<center><h2 style="color: #f16e00">Lancer la visite</h2></center>
+<!-- <center><p style="color: #f16e00">Lancer la visite</p></center> -->
+<!-- <br><br>ods-orange-100 -->
+
+<div class="d-grid gap-2 col-6 mx-auto">
+  <button class="btn btn-primary btn-lg" type="button" onclick="location.href='scriptNormalSTTFS.html'">en <br>mode STT  </button><br><br>
+  <button class="btn btn-primary btn-lg" type="button" onclick="location.href='MDTVOD2.mp4'">avec <br>un avatar LSF</button>
+</div>
+        <br><br><br><br>        <br><br>
+
+<div class="d-grid gap-2 col-4 mx-auto">
+  <button class="btn btn-secondary" type="button" onclick="location.href='params.html'"> Configuration</button><br><hr><br>
+</div>
+<br>
+<br><br><br><br> 
+<div class="d-grid gap-2 col-4 mx-auto">
+  <button class="btn btn-secondary" type="button" onclick="location.href='test.html'"> Tests internes</button>
+</div>
+<!-- <div class="d-grid gap-2 d-md-block">
+  <button id="btnFS" class="btn btn-secondary" type="button" onclick="FullScreenAsked()">passer <br> en plein écran</button>
+</div>
+<script>
+ function FullScreenAsked(action) {
+        var bodyElement = document.body;
+        requestFullscreen(bodyElement);
+        document.getElementById("btnFS").style.display = "none";
+
+  }
+</script>
+<script src="scripts/fullScreen.js">// gestion d'affichage plein écran/écran normal</script> -->
+
+    <script src="https://cdn.jsdelivr.net/npm/boosted@5.3.3/dist/js/boosted.bundle.min.js" integrity="sha384-3RoJImQ+Yz4jAyP6xW29kJhqJOE3rdjuu9wkNycjCuDnGAtC/crm79mLcwj1w2o/" crossorigin="anonymous"></script>
+  </body>
 </html>
+ 
